# rebridge

./: .env.example  .gitignore  CLAUDE.md  DEMO_SCRIPT.md  FOR_BACKEND.md  LICENSE  PROGRESS.md  README.md  clear_data.py  debug_worker.py  mock_grade.py  openapi.json  package-lock.json  pyproject.toml  rebridge_design_reference_v2.html  rebridge_ui_v2.html  requirements.txt  run_tests.py  scan_dynamo.py  setup_cors.py  test_grading.py  test_s3_upload.py  trigger_sqs.py
rebridge_api/: pyproject.toml  run_local.py  run_server.py
rebridge_api/tests/: conftest.py  fakes.py  test_api_routes.py  test_api_smoke.py  test_auth.py  test_cards_verify.py  test_event_wiring.py  test_harness_smoke.py  test_http_adapter.py  test_integration_dlq_alarm.py  test_integration_s3_sqs_worker.py  test_marketplace_extended.py  test_matches_route.py  test_private_route_jwt_enforcement_property.py  test_rbac.py  test_retry_then_dlq_bound_property.py  test_review_route.py  test_routing_adapter.py  test_scope_boundary.py  test_wiring.py  test_worker.py
rebridge_data/: pyproject.toml
rebridge_data/tests/: test_bedrock_grading_providers.py  test_data_integration.py  test_dynamo_item_repository.py  test_dynamo_review_queue_repository.py  test_eventbridge_demand_gateways.py  test_eventbridge_publisher.py  test_geohash.py  test_harness_smoke.py  test_kms_card_signer.py  test_location_precision_bound_property.py  test_s3_object_store.py  test_seeded_buyer_persona_repository.py  test_sqs_queue_client.py
rebridge_service/: pyproject.toml
rebridge_service/tests/: fakes.py  test_agent_pure_function_equivalence_property.py  test_cascade_ordering_property.py  test_confidence_gate.py  test_confidence_gate_boundary_property.py  test_decision_rationale_economics_property.py  test_demand_candidate_filtering_property.py  test_demand_matching_engine.py  test_demand_matching_match.py  test_demand_matching_matches_for.py  test_demand_matching_top_n_property.py  test_eventing_service.py  test_fakes.py  test_grade_schema_roundtrip.py  test_grading_engine.py  test_grading_latency_p99.py  test_grading_pipeline.py  test_harness_smoke.py  test_health_card_service.py  test_health_card_signverify_roundtrip.py  test_idempotency.py  test_item_creation_invariant.py  (+24 more)
(+181 files in other folders)
