[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rebridge-api"
version = "0.1.0"
description = "ReBridge API / presentation layer: FastAPI routers, Lambda adapter, SQS worker, Cognito JWT auth, composition root. Depends on rebridge_service."
requires-python = ">=3.11"
dependencies = [
    "rebridge-service",
    "rebridge-data",
    "boto3>=1.34",
    "fastapi>=0.110",
    "pydantic>=2.6",
    "mangum>=0.17",
    "pyjwt[crypto]>=2.8",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "httpx>=0.27",
    "moto>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.pyright]
extraPaths = ["."]
