[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rebridge-data"
version = "0.1.0"
description = "ReBridge data layer: abstract repository/gateway interfaces and boto3-backed implementations. boto3 lives only here."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "moto[dynamodb]>=5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.setuptools.package-data]
rebridge_data = ["data/*.json"]
