[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rebridge-service"
version = "0.1.0"
description = "ReBridge service / business-logic layer. Depends only on rebridge_data interfaces; never imports boto3."
requires-python = ">=3.11"
dependencies = [
    "rebridge-data",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rebridge_service = ["data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
